--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
         "publish:github": "npm config set '@fleetbase:registry' https://npm.pkg.github.com/ && npm publish"
     },
     "dependencies": {
-        "@fleetbase/ember-core": "^0.1.2",
-        "@fleetbase/ember-ui": "^0.1.8",
+        "@fleetbase/ember-core": "git+https://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:x-oauth-basic@github.com/AtomizeDEV/ember-core.git", 
+        "@fleetbase/ember-ui": "git+https://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:x-oauth-basic@github.com/AtomizeDEV/ember-ui.git", 
         "@fortawesome/ember-fontawesome": "^0.4.1",
         "@fortawesome/fontawesome-svg-core": "^6.4.0",
         "@fortawesome/free-solid-svg-icons": "^6.4.0",
