--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,9 @@ jobs:
     - name: Install Dependencies
       run: pnpm install
 
+    - name: Run lint
+      run: pnpm lint
+
     - name: Build
       run: pnpm run build
 
